# SelectiveBackprop

./: LICENSE.md  README.md  pyproject.toml
examples/: train.py
lib/: SelectiveBackpropper.py  backproppers.py  calculators.py  cifar.py  cutout.py  datasets.py  forwardproppers.py  fp_selectors.py  hist.py  loggers.py  losses.py  lrschedulers.py  mnist.py  predictors.py  sb_util.py  selectors.py  svhn.py  trainer.py  utils.py
model/: resnet.py  wide_resnet.py
