[tool.poetry]
name = "selectivebackprop"
version = "0.1.0"
description = ""
authors = ["Pieter Marsman <pietermarsman@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10.2"
torchvision = "^0.11.3"
tqdm = "^4.63.0"
scipy = "^1.8.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
